# Mid-D-Man.github.io

./: -_-note!!.mdix  .htaccess  404.html  Cargo.toml  LICENSE  README.md  Trunk.toml  _-_note!!!.dix  _headers  colors-9518c6591adab99b.css  index.html  manifest.json  midmanstudio-9f3c7b6d1d3129ef.js  midmanstudio-9f3c7b6d1d3129ef_bg.wasm  midmanstudio-f4048f1e26ac54e.js  midmanstudio-f4048f1e26ac54e_bg.wasm  service-worker.js
.github/workflows/: deploy-to-pages.yml  deploy.yml
Others/: ProjectStructure.txt
css/: responsive.css
js/: responsive.js
others/: ProjectStructure.txt  _system_data.asm
src/: app.rs  lib.rs  main.rs
src/components/: about.rs  cityscape.rs  contact.rs  header.rs  hero.rs  mod.rs  projects.rs  room.rs  services.rs
src/components/experimental/: background.rs  contact_footer.rs  mod.rs  room_separator.rs
src/components/experimental/room_walls/: left_wall.rs  right_wall.rs
src/components/portfolio/: about.rs  contact.rs  hero.rs  icons.rs  logo.rs  mod.rs  nav.rs  portfolio.css  projects.rs  services.rs
src/components/room_walls/: bottom_wall.rs  front_wall.rs  top_wall.rs
styles/: background.css  base.css  cityscape.css  contact-footer.css  content.css  main.css  portfolio.css  responsive.css  room-separator.css  room-walls.css  room.css  variables.css
