[package]
name = "midmanstudio"
version = "0.1.0"
edition = "2021"

# FIXED: For Leptos CSR, we only need the library target, not the binary
[lib]
crate-type = ["cdylib"]
name = "midmanstudio"

# REMOVED: The [[bin]] section that was causing the collision
# For Leptos CSR, we don't need a binary target since it compiles to WASM

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
