[package]
name = "midmanstudio"
version = "0.1.0"
edition = "2021"

# IMPORTANT: For Leptos CSR with Trunk, we need ONLY a library target
# Remove any binary configuration entirely

[lib]
crate-type = ["cdylib"]

# CRITICAL: No [[bin]] sections at all for CSR

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
