[package]
name = "midmanstudio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  # Console / window
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  # Events
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "SubmitEvent",
  # Scroll
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollToOptions",
  # DOM queries
  "NodeList",
  # IntersectionObserver (scroll-reveal)
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  # DomTokenList (classList)
  "DomTokenList",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
